syntax="proto3";
package it.maurosaladino.sdp.Proto;

message TokenRequest {
  message ListID {
    repeated int32 value = 1;
  }

  message ListIDWithM {
    repeated int32 value = 1;
  }

  message ListMeasurement {
    map<int32, double> listMeasurement = 1;
  }
  
  bool isOpen = 1;
  ListID listID = 2;
  ListIDWithM listIDWithM = 3;
  ListMeasurement listMeasurement = 4;
}


message TokenResponse {
   bool check = 1;
}

service TokenService {
  rpc sendToken(TokenRequest) returns (TokenResponse);
}